# MediCony

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  Jenkinsfile.daily  LICENSE  README.md  medicony-deployment.yaml.example  medicony.py  pyproject.toml  renovate.json
.github/workflows/: docker-image.yml  pytest.yml  release.yml
example_filters/: filters-clinics.txt  filters-examinations.txt
feature_test/: conftest.py  test_auth.py  test_booking.py
scripts/: build_image.sh  debug.sh  execute.sh  health_check.sh  quick_check.sh  start.sh
src/: config.py  http_client.py  id_value_util.py  logger.py  models.py  parse_args.py
src/app/: medicine_app.py  medicony_app.py  medicover_app.py
src/bot/: interactive_bot.py  shared_utils.py  telegram.py  validation_utils.py
src/bot/commands/: logs.py  medicine_activate.py  medicine_add.py  medicine_edit.py  medicine_list.py  medicine_remove.py  search_now.py  watch_add.py  watch_edit.py  watch_list.py  watch_remove.py
src/database/: __init__.py  base_db.py  medicover_client.py  medicover_db.py  pharma_client.py  pharma_db.py
src/medicover/: __init__.py  api_client.py  appointment.py  auth.py  matchers.py  presenters.py  watch.py
src/medicover/services/: watch_service.py
tests/: conftest.py  test_accounts.py  test_commands_logs.py  test_config_validation.py  test_db.py  test_db_helper.py  utils.py
tests/medicover/: __init__.py  test_appointment.py  test_commands_add_watch.py  test_commands_edit_watch.py  test_commands_remove_watch.py  test_commands_watches.py  test_http_client.py  test_matchers.py  test_presenters.py  test_watch.py
