[project]
name = "MediCony"
version = "1.3.1"
description = "A Python package for managing medical conditions and treatments in Medicover service."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pharmaradar @ https://github.com/bartekmp/pharmaradar/archive/refs/heads/main.tar.gz",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "notifiers==1.3.6",
    "python-dotenv==1.2.1",
    "fake-useragent==2.2.0",
    "pytz==2025.2",
    "tenacity==9.1.2",
    "numpy==2.4.0",
    "aiogram==3.24.0",
    "lxml>=5.0.0",
    "apscheduler==3.11.2",
    "click>=8.1.0,<8.2.0",
    "cryptography==46.0.3",
    "sqlalchemy==2.0.45",
    "psycopg2-binary==2.9.11",
]
optional-dependencies = { dev = [
    "black==25.12.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "python-semantic-release==10.5.3",
    "setuptools_scm==9.2.2",
] }

[project.scripts]
medicony = "medicony:main"

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["medicony"]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.black]
line-length = 120
preview = true
include = "\\.py$"
target-version = ["py312"]
exclude = "(\\.git|\\.hg|\\.mypy_cache|\\.tox|\\.venv|_build|buck-out|build|dist|node_modules|venv|__pycache__)"

[tool.pytest.ini_options]
addopts = "--ignore=feature_tests"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.semantic_release]
branch = "main"
changelog_file = ""
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat", "feature"]
patch_tags = ["fix", "bugfix", "improvement", "enhancement"]
allowed_tags = [
    "feat",
    "feature",
    "fix",
    "bugfix",
    "improvement",
    "enhancement",
]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true
